# hf-timestd

./: .gitignore  .netrc  .windsurfignore  ANALYTICS_CRITIQUE_2026-01-04.md  ANALYTICS_FIXES_IMPLEMENTED_2026-01-04.md  ANALYTICS_PIPELINE_ISSUES.md  ARCHITECTURAL_FIXES_2026-01-04.md  ARCHITECTURE.md  ARCHITECTURE_MULTI_CHANNEL_MEASUREMENT.md  CHANGELOG.md  CHRONY_OFFSET_FIX_2026-01-15.md  CHRONY_REACHABILITY_FIX.md  CLAUDE.md  CODEBASE_REVIEW_2026-01-16.md  CONTEXT.md  CONVERGENCE_MONITORING_2026-01-10.md  CRITIC_CONTEXT.md  CRITIC_CONTEXT.md.backup  CRITIC_CONTEXT_TONE_DETECTION.md  CRITIQUE_FIXES_2026-01-04.md  DATA_INVENTORY.md  DEBUGGING_SESSION_SUMMARY.md  DEGRADATION_ROOT_CAUSE_2026-01-04.md  DEPENDENCIES.md  DIRECTORY_STRUCTURE.md  DISCRIMINATION_FAILURE_ANALYSIS_2026-01-11.md  FIX_STATUS_FINAL_2026-01-11.md  GRAPE_SEPARATION.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INSTALLATION_FIXES_APPLIED.md  INSTALLATION_READINESS_REPORT.md  METROLOGY.md  MIGRATION_PLAN.md  NEGATIVE_DCLOCK_DIAGNOSIS_2026-01-11.md  PHASE2_CALIBRATION_DIAGNOSIS_2026-01-11.md  PHASE2_PROPAGATION_STATS_SUMMARY.md  PHASE2_UNCERTAINTY_DIAGNOSIS_2026-01-11.md  README.md  ROOT_CAUSE_NEGATIVE_DCLOCK_2026-01-11.md  (+29 more)
config/: chrony-timestd-refclocks.conf  environment  environment.production  environment.template  environment.timestd.template  help.toml  logrotate-timestd  timestd-config.toml  timestd-config.toml.bak.20251218_030309  timestd-config.toml.template
deploy/: udev-lb1421-nmea.rules
docs/: ARCHITECTURE-FIRST-PRINCIPLES.md  ARCHITECTURE.md  AUDIT_FINDINGS.md  BOOTSTRAP_METHODOLOGY.md  BPSK-PPS-DETECTION-METHODS.md  CALIBRATION_SYSTEM.md  CARRIER_DOPPLER_INTERPRETATION.md  DEBUGGING.md  DEPENDENCY_CASCADE.md  DEPLOYMENT_CORRESPONDENCE_CHECKLIST.md  DEPLOYMENT_REVIEW.md  DETECTION_METHODOLOGY_REVIEW.md  DOCUMENTATION_AUDIT_2026_02_14.md  DRF_UPLOAD_SYSTEM.md  DUAL_CHRONY_FEED_ARCHITECTURE.md  EXTERNAL_PREREQUISITES.md  GPS_TEC_OPTIONAL.md  GRAPE_DAILY_PROCESSING.md  GRAPE_DIGITAL_RF_RECORDER.md  HAMSCI_2026_PRESENTATION.md  HAMSCI_2026_WORKSHOP_ABSTRACT.md  HDF5-TO-SQLITE-MIGRATION.md  HDF5_MIGRATION_GUIDE.md  HF-PPS-CHRONY-TUNING.md  HamSCI_2026_AC0G.pptx  INDEX.md  INTEGRATION.md  IONOSPHERIC_REANALYSIS.md  IONOSPHERIC_RESOLUTION.md  METROLOGIST_DESCRIPTION.md  METROLOGY.md  MULTI_STATION_DETECTION_STATUS.md  NASA_EARTHDATA_SETUP.md  OVERVIEW.md  PHARLAP_RAYTRACING.md  PHASE1_DATA_PIPELINE.md  PHASE4_TONE_DETECTION.md  PHASE_4_PLAN.md  PHASE_ENGINE_ARCHITECTURE.md  PHYSICS.md  (+24 more)
scripts/: analyze_correlations.py  analyze_diff_sidecar.py  analyze_doppler.py  apply_kalman_integration_part1.py  apply_kalman_integration_part2.py  auto-generate-spectrograms.sh  automated_quality_analysis.py  backfill-grape.sh  backfill-now.sh  backfill_fusion_data.py  batch_generate_10hz_npz.py  check-chrony-reach.sh  check-clock-health.sh  check-freshness-alert.sh  check_and_generate_spectrograms.py  check_channels.py  check_tec_values.py  check_version.py  cleanup-orphaned-data.sh  cleanup_all.py  cleanup_channels.py  cleanup_old_decimation.sh  common.sh  compact_hdf5.py  config-review.sh  config_zedf9p_usb.py  deploy-pll-decoder.sh  deploy-prune.sh  deploy-service-improvements.sh  deploy-service-management.sh  deploy-v3.10.1-fixes.sh  deploy.sh  deploy_ionex.sh  deploy_web_ui.sh  detect_ip.py  diagnose_dclock.py  diagnose_real_iq.py  diagnose_tick_filter.py  diagnose_tick_filter_v2.py  diagnose_tick_filter_v3.py  (+108 more)
systemd/: chronyd-timestd-shm.conf  grape-daily.service  grape-daily.timer  grape-upload-retry.service  grape-upload-retry.timer  radiod-cpu-affinity.conf  timestd-alert@.service  timestd-analytics.service  timestd-chrony-monitor.service  timestd-chrony-monitor.timer  timestd-clock-monitor.service  timestd-clock-monitor.timer  timestd-core-recorder.service  timestd-fusion.service  timestd-hfps-watchdog.service  timestd-hfps-watchdog.timer  timestd-hpps-watchdog.service  timestd-hpps-watchdog.timer  timestd-ionex-download.service  timestd-ionex-download.timer  timestd-iono-reanalysis.service  timestd-iono-reanalysis.timer  timestd-iri-healthcheck.service  timestd-iri-healthcheck.timer  timestd-iri-update.service  timestd-iri-update.timer  timestd-l2-calibration.service  timestd-metrology.service  timestd-metrology@.service  timestd-physics.service  timestd-pipeline-watchdog.service  timestd-pipeline-watchdog.timer  timestd-prune.service  timestd-prune.timer  timestd-radiod-monitor.service  timestd-science-aggregator.service  timestd-spaceweather-healthcheck.service  timestd-spaceweather-healthcheck.timer  timestd-sqlite-parity.service  timestd-sqlite-parity.timer  (+7 more)
tasks/: next-session.md  todo.md
tests/: run_critical_fixes_tests.py  test_authority_manager.py  test_authority_runner.py  test_authority_snapshot_store.py  test_binary_archive_memmap.py  test_bootstrap_coordinator.py  test_bootstrap_rolling_buffer.py  test_bpm_discriminator.py  test_bpsk_chain_delay_store.py  test_bpsk_pps_calibrator_diff.py  test_bpsk_pps_calibrator_mf.py  test_bpsk_pps_calibrator_mf_cascade_gate.py  test_bpsk_pps_calibrator_mf_costas_gate.py  test_bpsk_pps_calibrator_mf_step_detection.py  test_broadcast_kalman_filter.py  test_broadcast_kalman_timing.py  test_broadcast_registry.py  test_broadcast_window_safeguards.py  test_carrier_tec_quality.py  test_chrony_refclock_gate.py  test_chrony_stepper.py  test_chrony_tracking_probe.py  test_chu_frame_slip.py  test_chu_fsk_coarse_time_hook.py  test_clean_deconvolution.py  test_cli_inventory.py  test_cli_quality.py  test_coarse_time_source.py  test_coarse_time_writer.py  test_core_recorder_shared_multi.py  test_core_recorder_t5_anchor_offset.py  test_core_recorder_t6_drift_monitor.py  test_core_recorder_t6_recapture.py  test_core_recorder_t6_shared.py  test_core_recorder_t6_step_recovery.py  test_d_clock_continuity.py  test_day_boundary.py  test_discrimination_stability.py  test_external_data.py  test_fusion_gnss_vtec_rtp_gate.py  (+60 more)
web-api/: DEPLOYMENT_GUIDE.md  PHASE1_COMPLETE.md  README.md  SOLAR_CORRELATION_README.md  config.py  debug_routes.py  main.py  requirements.txt  start.sh  (+1 more)
(+544 files in other folders)
