[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-timestd"
version = "7.0.0"
description = "HF Time Standard Analysis - WWV/WWVH/CHU/BPM timing via ka9q-radio"
readme = "README.md"
authors = [
  { name = "Michael James Hauan AC0G", email = "ac0g@hauan.org" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
    "zeroconf>=0.132.0",
    "ka9q-python>=3.14.0",  # 3.14.0 adds RadiodControl(client_id=) for per-(client, radiod) multicast destination derivation (CONTRACT v0.3 §7); 3.11.0 added low_edge/high_edge kwargs T6 BPSK calibrator uses for ±25 kHz channel filter
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "iri2020 @ git+https://github.com/space-physics/iri2020.git",
    "zstandard>=0.22.0",
    "sysv_ipc>=1.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "jinja2>=3.0.0",
    "systemd-python>=235",
    "xarray>=2023.1.0",
    "watchdog>=3.0.0",
    "requests>=2.28.0",
    "digital_rf>=2.6.0",
    "paramiko>=3.0.0",
    "pydantic>=2.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
lz4 = [
    "lz4>=4.0.0",
]
gnss = [
    "pyserial>=3.5",
    "pyubx2>=1.2.0",
]
iono = [
    "netCDF4>=1.6.0",
    "boto3>=1.28.0",
]
# Physics overlay: ray-tracing and advanced propagation science (offline/batch only).
# Neither is required for the real-time chrony feed (see TECHNICAL_REFERENCE.md).
# pyLAP is NOT listed here because its setup.py requires PHARLAP_HOME at build time,
# which breaks lockfile resolution on machines without PHaRLAP installed.
# Install it manually after setting up PHaRLAP 4.7.4:
#     uv pip install -e ../pylap          # or: pip install -e ../pylap
# See setup-raytrace workflow for PHaRLAP setup.
raytrace = [
    "scipy>=1.10.0",   # already in core deps; listed here for explicitness
]

[project.scripts]
hf-timestd = "hf_timestd.cli:main"
timestd = "hf_timestd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hf_timestd.schemas" = ["*.json"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
